--- a/directbak.yaml
+++ b/directbak.yaml
@@ -570,7 +570,6 @@ payload:
   - '+.0762uu.com'
   - '+.0763f.com'
   - '+.0763home.com'
-  - '+.0763zuche.com'
   - '+.076650.com'
   - '+.0768.gd'
   - '+.0769che.com'
@@ -885,7 +884,6 @@ payload:
   - '+.108cun.com'
   - '+.108pk.com'
   - '+.108qi.com'
-  - '+.108shu.com'
   - '+.108sq.com'
   - '+.108tian.com'
   - '+.109.com'
@@ -960,7 +958,6 @@ payload:
   - '+.114dns.com'
   - '+.114dns.net'
   - '+.114god.com'
-  - '+.114hrb.com'
   - '+.114huoche.com'
   - '+.114hzw.com'
   - '+.114ic.com'
@@ -1872,7 +1869,6 @@ payload:
   - '+.1drv.ws'
   - '+.1dufish.com'
   - '+.1dume.com'
-  - '+.1dusou.com'
   - '+.1dutm.com'
   - '+.1f11.com'
   - '+.1fenda.com'
@@ -2378,7 +2374,6 @@ payload:
   - '+.258jituan.com'
   - '+.258sd.com'
   - '+.25992.com'
-  - '+.259go.com'
   - '+.25az.com'
   - '+.25dx.com'
   - '+.25game.com'
@@ -3549,7 +3544,6 @@ payload:
   - '+.4311.com'
   - '+.4321.com'
   - '+.432520.com'
-  - '+.43321.cc'
   - '+.43423manhua.com'
   - '+.435000.com'
   - '+.435200.com'
@@ -4338,7 +4332,6 @@ payload:
   - '+.51xuexiaoyi.com'
   - '+.51xumei.com'
   - '+.51xxs.com'
-  - '+.51xxziyuan.com'
   - '+.51y5.com'
   - '+.51y5.net'
   - '+.51yabei.com'
@@ -5992,7 +5985,6 @@ payload:
   - '+.7dianw.com'
   - '+.7didc.com'
   - '+.7do.net'
-  - '+.7down.com'
   - '+.7down.net'
   - '+.7dsp.com'
   - '+.7dsw.com'
@@ -6359,7 +6351,6 @@ payload:
   - '+.86pm25.com'
   - '+.86qc.com'
   - '+.86sb.com'
-  - '+.86shouji.com'
   - '+.86tec.com'
   - '+.86uuu.com'
   - '+.86wan.com'
@@ -6842,7 +6833,6 @@ payload:
   - '+.922000.com'
   - '+.92220668.com'
   - '+.92220701.com'
-  - '+.922c25.com'
   - '+.925ps.com'
   - '+.927.la'
   - '+.927927.com'
@@ -7897,7 +7887,6 @@ payload:
   - '+.agrosg.com'
   - '+.agrowingchina.com'
   - '+.agucn.com'
-  - '+.aguo.com'
   - '+.agxs.net'
   - '+.ah-inter.com'
   - '+.ah-px.com'
@@ -10127,7 +10116,6 @@ payload:
   - '+.banbf.com'
   - '+.banciyuan.me'
   - '+.bandaoapp.com'
-  - '+.bandaoningmeng.com'
   - '+.bandari.net'
   - '+.bandcevent.com'
   - '+.bandenghui.com'
@@ -11000,7 +10988,6 @@ payload:
   - '+.bieyangapp.com'
   - '+.bifabu.com'
   - '+.bifeige.com'
-  - '+.bifong.com'
   - '+.big-bit.com'
   - '+.big-shanghai.com'
   - '+.bigaaa.net'
@@ -11278,7 +11265,6 @@ payload:
   - '+.bitmingw.com'
   - '+.bitol.net'
   - '+.bitqiu.com'
-  - '+.bitscat.org'
   - '+.bitscn.com'
   - '+.bitscn.net'
   - '+.bitsde.com'
@@ -12236,7 +12222,6 @@ payload:
   - '+.budou.com'
   - '+.buduanwang.vip'
   - '+.buduobaobao.com'
-  - '+.bufan.com'
   - '+.buffst.com'
   - '+.bug.im'
   - '+.bughd.com'
@@ -12609,7 +12594,6 @@ payload:
   - '+.cackui.com'
   - '+.cacpp.com'
   - '+.cacre.org'
-  - '+.cacs100.com'
   - '+.cactifans.com'
   - '+.cactifans.org'
   - '+.cactmc.com'
@@ -13669,7 +13653,6 @@ payload:
   - '+.cgebook.com'
   - '+.cgejournal.com'
   - '+.cger.com'
-  - '+.cgf-csyc.com'
   - '+.cgfdgre.net'
   - '+.cgiale.com'
   - '+.cgiia.com'
@@ -13709,7 +13692,6 @@ payload:
   - '+.cgtz.com'
   - '+.cguardian.com'
   - '+.cguiw.com'
-  - '+.cguwan.com'
   - '+.cgvoo.com'
   - '+.cgwang.com'
   - '+.cgwell.com'
@@ -14125,7 +14107,6 @@ payload:
   - '+.cheoz.com'
   - '+.chepin88.com'
   - '+.chepinnet.com'
-  - '+.cherriespie.com'
   - '+.cherymanuals.com'
   - '+.cheshi-img.com'
   - '+.cheshi.com'
@@ -16415,7 +16396,6 @@ payload:
   - '+.coding.red'
   - '+.codingapp.com'
   - '+.codingbelief.com'
-  - '+.codingboy.com'
   - '+.codingdao.com'
   - '+.codingdict.com'
   - '+.codingke.com'
@@ -17228,7 +17208,6 @@ payload:
   - '+.ctrip.com'
   - '+.ctrip.my'
   - '+.ctrip.sg'
-  - '+.ctripa.com'
   - '+.ctripbiz.com'
   - '+.ctripbuy.hk'
   - '+.ctripcorp.com'
@@ -18783,7 +18762,6 @@ payload:
   - '+.diaoyu365.com'
   - '+.diaoyubo.com'
   - '+.diaoyula.com'
-  - '+.diaoyur.com'
   - '+.diaoyuren.com'
   - '+.diaoyuwang.com'
   - '+.diaoyuweng.com'
@@ -24576,7 +24554,6 @@ payload:
   - '+.gongpin.net'
   - '+.gongpingjia.com'
   - '+.gongshang120.com'
-  - '+.gongshi8.com'
   - '+.gongsibao.com'
   - '+.gongsijiaoyi.com'
   - '+.gongsizhijia.com'
@@ -27741,7 +27718,6 @@ payload:
   - '+.hongdoulive.com'
   - '+.hongen.com'
   - '+.hongfen.org'
-  - '+.honggancn.com'
   - '+.honggebang.com'
   - '+.honghailt.com'
   - '+.honghanda.com'
@@ -28908,7 +28884,6 @@ payload:
   - '+.huzhoumuseum.com'
   - '+.huzicaotang.com'
   - '+.huzu.com'
-  - '+.hvac001.com'
   - '+.hvacstar.com'
   - '+.hvdiy.com'
   - '+.hvtong.com'
@@ -30413,7 +30388,6 @@ payload:
   - '+.indexmob.com'
   - '+.indiancn.com'
   - '+.indics.com'
-  - '+.indiehacker.im'
   - '+.indielight.net'
   - '+.indienova.com'
   - '+.indier.com'
@@ -34654,7 +34628,6 @@ payload:
   - '+.kn120.com'
   - '+.kneng.net'
   - '+.knewbi.com'
-  - '+.knewhy.com'
   - '+.knewone.com'
   - '+.knewsmart.com'
   - '+.knotesapp.com'
@@ -35057,7 +35030,6 @@ payload:
   - '+.kubey.cc'
   - '+.kubikeji.com'
   - '+.kubo-360-tudou.com'
-  - '+.kubozy-cdn-baidu.com'
   - '+.kuche.com'
   - '+.kuchuan.com'
   - '+.kudasuye.com'
@@ -37078,7 +37050,6 @@ payload:
   - '+.lnrcu.com'
   - '+.lnrsks.com'
   - '+.lnsgczb.com'
-  - '+.lnslymy.com'
   - '+.lntenghui.com'
   - '+.lntvu.com'
   - '+.lntycp.com'
@@ -39643,7 +39614,6 @@ payload:
   - '+.mmtrixopt.com'
   - '+.mmtsg.com'
   - '+.mmuaa.com'
-  - '+.mmwan.cc'
   - '+.mmww.com'
   - '+.mmxiaowu.com'
   - '+.mmy.la'
@@ -39867,7 +39837,6 @@ payload:
   - '+.momooyo.com'
   - '+.momoshifu.com'
   - '+.momotn.com'
-  - '+.momoyoyo.com'
   - '+.momself.club'
   - '+.momzs.com'
   - '+.moneydai.com'
@@ -39883,7 +39852,6 @@ payload:
   - '+.monsooncvs.com'
   - '+.monsterlin.com'
   - '+.montage-tech.com'
-  - '+.monteamor.com'
   - '+.monternet.com'
   - '+.monthdate.com'
   - '+.montnets.com'
@@ -41186,6 +41154,7 @@ payload:
   - '+.ni8.com'
   - '+.ni93.com'
   - '+.nianbin.com'
+  - '+.nianhua.plus'
   - '+.nianw.com'
   - '+.nianzhi.cc'
   - '+.niaobee.com'
@@ -41641,7 +41610,6 @@ payload:
   - '+.nshzpks.com'
   - '+.nsini.com'
   - '+.nsisfans.com'
-  - '+.nsnodes.com'
   - '+.nsoad.com'
   - '+.nsoft.vip'
   - '+.nsrfww.com'
@@ -45348,7 +45316,6 @@ payload:
   - '+.quansheng-group.com'
   - '+.quanshi.com'
   - '+.quanshishequ.com'
-  - '+.quanshu.net'
   - '+.quanshuge.com'
   - '+.quanshuwan.com'
   - '+.quansucloud.com'
@@ -47612,10 +47579,7 @@ payload:
   - '+.sh9yuan.com'
   - '+.sha-cun.com'
   - '+.sha-steel.com'
-  - '+.sha2255.com'
-  - '+.sha2299.com'
   - '+.sha2777.com'
-  - '+.sha7000.com'
   - '+.sha990.com'
   - '+.shaanxirk.com'
   - '+.shabc.net'
@@ -47862,6 +47826,7 @@ payload:
   - '+.shcngz.com'
   - '+.shcs2010.com'
   - '+.shcsdq.com'
+  - '+.shcstheatre.com'
   - '+.shcxzxgs.com'
   - '+.shcymc.com'
   - '+.shdctp.com'
@@ -48100,6 +48065,7 @@ payload:
   - '+.shifeng.com'
   - '+.shifenyuedu.com'
   - '+.shigaoshan.com'
+  - '+.shige.group'
   - '+.shiguangkey.com'
   - '+.shiguangxu.com'
   - '+.shiguangyouju.com'
@@ -48686,7 +48652,6 @@ payload:
   - '+.shxil.com'
   - '+.shxkwck.com'
   - '+.shxmhc.com'
-  - '+.shxpp.com'
   - '+.shxt.com'
   - '+.shxwcb.com'
   - '+.shy99.com'
@@ -49920,6 +49885,7 @@ payload:
   - '+.sqngvd.com'
   - '+.sqrc.net'
   - '+.sqreader.com'
+  - '+.sqrt9.com'
   - '+.sqrtthree.com'
   - '+.sqstudio.com'
   - '+.sqsxs.com'
@@ -51464,6 +51430,7 @@ payload:
   - '+.taoxiaolu.com'
   - '+.taoxiaozhong.com'
   - '+.taoxie.com'
+  - '+.taoxuemei.com'
   - '+.taoxv.com'
   - '+.taoyeyou.com'
   - '+.taoyi-support.com'
@@ -53355,6 +53322,7 @@ payload:
   - '+.tupu360.com'
   - '+.tuputech.com'
   - '+.tupuw.com'
+  - '+.tuqou.com'
   - '+.tuquu.com'
   - '+.turangyq.com'
   - '+.turbomail.org'
@@ -53793,7 +53761,6 @@ payload:
   - '+.udashi.com'
   - '+.udaxia.com'
   - '+.udbac.com'
-  - '+.udcredit.com'
   - '+.uddtrip.com'
   - '+.udecig.com'
   - '+.udeepin.com'
@@ -54541,7 +54508,6 @@ payload:
   - '+.vedeng.com'
   - '+.veding.com'
   - '+.vediotalk.com'
-  - '+.veedrin.com'
   - '+.veelink.com'
   - '+.veeqi.com'
   - '+.veer.com'
@@ -54922,7 +54888,6 @@ payload:
   - '+.vpcoupons.com'
   - '+.vpcs.com'
   - '+.vpgame.com'
-  - '+.vpgcdn.com'
   - '+.vpiaotong.com'
   - '+.vpie.net'
   - '+.vpimg1.com'
@@ -56545,7 +56510,6 @@ payload:
   - '+.whut-px.com'
   - '+.whutech.com'
   - '+.whutosa.com'
-  - '+.whuwto.com'
   - '+.whwanshun.com'
   - '+.whwat.com'
   - '+.whwater.com'
@@ -56640,7 +56604,6 @@ payload:
   - '+.wikimirror.org'
   - '+.wikimoe.com'
   - '+.wikiyuedu.com'
-  - '+.wikore.com'
   - '+.wikore.net'
   - '+.wilddog.com'
   - '+.wilddream.net'
@@ -56941,7 +56904,6 @@ payload:
   - '+.wmjygg.net'
   - '+.wmjyqd.net'
   - '+.wmjyszba.com'
-  - '+.wmljw.com'
   - '+.wmlunwen.com'
   - '+.wmnetwork.cc'
   - '+.wmota.htcsense.com'
@@ -57788,7 +57750,6 @@ payload:
   - '+.wy28.com'
   - '+.wyaoqing.com'
   - '+.wyaq.com'
-  - '+.wyb168.com'
   - '+.wybbao.com'
   - '+.wybgs.com'
   - '+.wycanyin.com'
@@ -58507,6 +58468,7 @@ payload:
   - '+.xiaoantech.com'
   - '+.xiaobai.com'
   - '+.xiaobaibk.com'
+  - '+.xiaobaichongw.com'
   - '+.xiaobaipan.com'
   - '+.xiaobaishiji.com'
   - '+.xiaobaishixi.com'
@@ -58692,7 +58654,6 @@ payload:
   - '+.xiaopena.com'
   - '+.xiaopeng.com'
   - '+.xiaophy.com'
-  - '+.xiaopi.com'
   - '+.xiaopinw.com'
   - '+.xiaopiu.com'
   - '+.xiaoqiandao.com'
@@ -58816,7 +58777,6 @@ payload:
   - '+.xiaoyuxitong.com'
   - '+.xiaoyuzhoufm.com'
   - '+.xiaoz.me'
-  - '+.xiaoz123.com'
   - '+.xiaozaixiao.com'
   - '+.xiaozhan.cc'
   - '+.xiaozhang365.com'
@@ -59164,7 +59124,6 @@ payload:
   - '+.xinjimo.com'
   - '+.xinjingks.com'
   - '+.xinjisuan.net'
-  - '+.xinjizhou.com'
   - '+.xinjunshi.net'
   - '+.xinjunshicn.net'
   - '+.xinkamai.com'
@@ -60173,6 +60132,7 @@ payload:
   - '+.xunwei.tm'
   - '+.xunxi.com'
   - '+.xunxu.com'
+  - '+.xunyangzaixian.com'
   - '+.xunyixia.com'
   - '+.xunyou.com'
   - '+.xunyou.mobi'
@@ -61472,7 +61432,6 @@ payload:
   - '+.yintechi.com'
   - '+.yintop.com'
   - '+.yinuoedu.net'
-  - '+.yinuosy.com'
   - '+.yinxi.net'
   - '+.yinxiang.com'
   - '+.yinxianggame.com'
@@ -61920,7 +61879,6 @@ payload:
   - '+.ynshf.com'
   - '+.ynshijian.com'
   - '+.ynsjg.com'
-  - '+.ynsjnls.com'
   - '+.ynsqx.com'
   - '+.ynteng.com'
   - '+.yntsg.com'
@@ -63615,7 +63573,6 @@ payload:
   - '+.zciii.com'
   - '+.zcimg.com'
   - '+.zcitidc.com'
-  - '+.zcitwf.com'
   - '+.zciv.com'
   - '+.zcjxedu.com'
   - '+.zclock.xyz'
@@ -64814,7 +64771,6 @@ payload:
   - '+.zhufaner.com'
   - '+.zhufengpeixun.com'
   - '+.zhufenqi.com'
-  - '+.zhufushuo.com'
   - '+.zhuge.com'
   - '+.zhugeapi.com'
   - '+.zhugeapi.net'
@@ -65689,6 +65645,7 @@ payload:
   - '+.zsksw.net'
   - '+.zslady.com'
   - '+.zsld86.com'
+  - '+.zslefx.art'
   - '+.zslin.com'
   - '+.zslp021.com'
   - '+.zslyyn12.com'
@@ -65837,7 +65794,6 @@ payload:
   - '+.zuitu.com'
   - '+.zuiwan.net'
   - '+.zuixiaoyao.com'
-  - '+.zuixinchao.com'
   - '+.zuixingzuo.net'
   - '+.zuixu.com'
   - '+.zuixue.com'
