--- a/directbak.yaml
+++ b/directbak.yaml
@@ -1293,7 +1293,6 @@ payload:
   - '+.1415926pi.com'
   - '+.14294.com'
   - '+.14498.com'
-  - '+.144n.com'
   - '+.1451cn.com'
   - '+.14583.com'
   - '+.147xiaoshuo.com'
@@ -2455,7 +2454,6 @@ payload:
   - '+.28123.com'
   - '+.2827.com'
   - '+.28493.com'
-  - '+.285868.com'
   - '+.2858999.com'
   - '+.285u.com'
   - '+.288288dy.com'
@@ -2839,7 +2837,6 @@ payload:
   - '+.345kam.com'
   - '+.3464.com'
   - '+.3499.co'
-  - '+.34dm.com'
   - '+.34ey.cc'
   - '+.34job.com'
   - '+.34l.com'
@@ -3008,7 +3005,6 @@ payload:
   - '+.360xh.com'
   - '+.360xiaos.com'
   - '+.360xiehui.com'
-  - '+.360xixi.com'
   - '+.360xkw.com'
   - '+.360xlab.org'
   - '+.360yfw.com'
@@ -5250,7 +5246,6 @@ payload:
   - '+.5xml.com'
   - '+.5xts.com'
   - '+.5xue.com'
-  - '+.5xuni.com'
   - '+.5y100.com'
   - '+.5y51.com'
   - '+.5y6s.com'
@@ -5365,7 +5360,6 @@ payload:
   - '+.63diy.com'
   - '+.63pe.com'
   - '+.63qingyou.com'
-  - '+.63tl.com'
   - '+.63ys.com'
   - '+.63yx.com'
   - '+.641.com'
@@ -5844,7 +5838,6 @@ payload:
   - '+.77169.net'
   - '+.7717wan.com'
   - '+.7723.com'
-  - '+.7724.com'
   - '+.7724yx.com'
   - '+.7725.com'
   - '+.7729.com'
@@ -7095,7 +7088,6 @@ payload:
   - '+.9799.com'
   - '+.97add.com'
   - '+.97atc.com'
-  - '+.97cms.com'
   - '+.97dod.com'
   - '+.97douyin.com'
   - '+.97gg.net'
@@ -7331,7 +7323,6 @@ payload:
   - '+.9jiu9jiu.com'
   - '+.9juewu.com'
   - '+.9jx.com'
-  - '+.9k51.com'
   - '+.9k9by.com'
   - '+.9k9k.com'
   - '+.9k9ms.com'
@@ -9483,7 +9474,6 @@ payload:
   - '+.astorpiano.com'
   - '+.astrocn.org'
   - '+.astron.ac'
-  - '+.astronautchina.com'
   - '+.astropulsion.com'
   - '+.asussmart.com'
   - '+.asussz-zp.com'
@@ -13674,7 +13664,6 @@ payload:
   - '+.cgsfusion.com'
   - '+.cgsoft.net'
   - '+.cgspread.com'
-  - '+.cgstartup.com'
   - '+.cgtblog.com'
   - '+.cgtime.net'
   - '+.cgtn.com'
@@ -14010,7 +13999,6 @@ payload:
   - '+.cheng95.com'
   - '+.cheng95.net'
   - '+.chengadx.com'
-  - '+.chengailvsuo.com'
   - '+.chengbanren02.com'
   - '+.chengchuanren.com'
   - '+.chengdebank.com'
@@ -14815,7 +14803,6 @@ payload:
   - '+.chinawiserv.com'
   - '+.chinawitmedia.com'
   - '+.chinawoodnet.com'
-  - '+.chinawpn.com'
   - '+.chinawr.net'
   - '+.chinawudang.com'
   - '+.chinawutong.com'
@@ -16422,7 +16409,6 @@ payload:
   - '+.coinnice.com'
   - '+.coinsky.com'
   - '+.coinvs.com'
-  - '+.cojia.net'
   - '+.cokemine.com'
   - '+.cokll.com'
   - '+.cokutau.com'
@@ -17480,7 +17466,6 @@ payload:
   - '+.czcid.com'
   - '+.czcqly.com'
   - '+.czctech.com'
-  - '+.czcyme.com'
   - '+.czdingming.com'
   - '+.czdrbz.com'
   - '+.czds.net'
@@ -18701,7 +18686,6 @@ payload:
   - '+.diansu-cdn.net'
   - '+.diantoushi.com'
   - '+.diantui.net'
-  - '+.dianview.com'
   - '+.dianwanhezi.com'
   - '+.dianwannan.com'
   - '+.dianwoba.com'
@@ -20092,7 +20076,6 @@ payload:
   - '+.dxztc.com'
   - '+.dxzx.com'
   - '+.dxzy163.com'
-  - '+.dy008.com'
   - '+.dy1905.net'
   - '+.dy2018.net'
   - '+.dybeta.com'
@@ -23585,7 +23568,6 @@ payload:
   - '+.gaobata.com'
   - '+.gaobei.com'
   - '+.gaobiao.net'
-  - '+.gaobo.name'
   - '+.gaocegege.com'
   - '+.gaochengnews.net'
   - '+.gaochun.info'
@@ -23639,7 +23621,6 @@ payload:
   - '+.gaomon.net'
   - '+.gaopaiwood.com'
   - '+.gaopeng.com'
-  - '+.gaoqing.fm'
   - '+.gaoqingpai.com'
   - '+.gaoqiwenda.com'
   - '+.gaoqixhb.com'
@@ -26782,7 +26763,6 @@ payload:
   - '+.heitao.me'
   - '+.heitao2014.com'
   - '+.heixi.com'
-  - '+.heiyaheiya.com'
   - '+.heiyan.com'
   - '+.heiyan.la'
   - '+.heiyan.org'
@@ -28671,7 +28651,6 @@ payload:
   - '+.hulinhong.com'
   - '+.huliqun.com'
   - '+.huliyx.com'
-  - '+.hulkdev.com'
   - '+.huluboshi.com'
   - '+.huluhour.com'
   - '+.huluip.tech'
@@ -29189,6 +29168,7 @@ payload:
   - '+.hzyuanshan.com'
   - '+.hzyuedu.com'
   - '+.hzyuewan.com'
+  - '+.hzywinf.com'
   - '+.hzyz.net'
   - '+.hzzhaobiao.com'
   - '+.hzzkj.net'
@@ -30013,6 +29993,7 @@ payload:
   - '+.iissnan.com'
   - '+.iitcp.com'
   - '+.iitoutiao.com'
+  - '+.iituku.com'
   - '+.iivey.com'
   - '+.iiycy.com'
   - '+.iiyi.com'
@@ -30038,6 +30019,7 @@ payload:
   - '+.ijiwen.com'
   - '+.ijizhi.com'
   - '+.ijjnews.com'
+  - '+.ijn952.com'
   - '+.ijnqc.com'
   - '+.ijogame.com'
   - '+.ijq.tv'
@@ -32049,7 +32031,6 @@ payload:
   - '+.jie518.com'
   - '+.jiebaodz.com'
   - '+.jiecao.com'
-  - '+.jiecaojingxuan.com'
   - '+.jiechupm.com'
   - '+.jiedaibao.com'
   - '+.jiediankeji.com'
@@ -33215,7 +33196,6 @@ payload:
   - '+.jssytc.com'
   - '+.jstdtncj.com'
   - '+.jstfdz.com'
-  - '+.jstoo.com'
   - '+.jstour.com'
   - '+.jstoys.net'
   - '+.jstucdn.com'
@@ -35024,7 +35004,6 @@ payload:
   - '+.kuashou.com'
   - '+.kubey.cc'
   - '+.kubikeji.com'
-  - '+.kubo-360-tudou.com'
   - '+.kuche.com'
   - '+.kuchuan.com'
   - '+.kudasuye.com'
@@ -39007,7 +38986,6 @@ payload:
   - '+.mgtv.com'
   - '+.mgw999.com'
   - '+.mgwxw.com'
-  - '+.mgwyx.com'
   - '+.mgxzsy.com'
   - '+.mgyapp.com'
   - '+.mgyxw.net'
@@ -39140,7 +39118,6 @@ payload:
   - '+.microdiag.com'
   - '+.microdreams.com'
   - '+.microfotos.com'
-  - '+.microland-design.com'
   - '+.microlensyh.com'
   - '+.microlz.com'
   - '+.micromouse.tech'
@@ -44527,7 +44504,6 @@ payload:
   - '+.qieerxi.com'
   - '+.qieman.com'
   - '+.qiepai.com'
-  - '+.qieseo.com'
   - '+.qieta.com'
   - '+.qietu6.com'
   - '+.qieying.com'
@@ -48200,7 +48176,6 @@ payload:
   - '+.shkuangjing.com'
   - '+.shkypump.com'
   - '+.shl56.com'
-  - '+.shlandscape.com'
   - '+.shlawserve.com'
   - '+.shlcd.com'
   - '+.shld.com'
@@ -50050,7 +50025,6 @@ payload:
   - '+.staticssl.image-gmkt.com'
   - '+.staycu.com'
   - '+.stbieshu.com'
-  - '+.stboda.com'
   - '+.stc2002.com'
   - '+.stcmcu.com'
   - '+.stcmcudata.com'
@@ -50202,7 +50176,6 @@ payload:
   - '+.sublimetextcn.com'
   - '+.subline.org'
   - '+.subo.net'
-  - '+.subo40.com'
   - '+.subom.net'
   - '+.subond.com'
   - '+.subuy.com'
@@ -50469,7 +50442,6 @@ payload:
   - '+.support.globalsign.com'
   - '+.support.lenovo.com'
   - '+.supumall.com'
-  - '+.supuy.com'
   - '+.suqian360.com'
   - '+.suqicloud.com'
   - '+.suqishi.com'
@@ -50963,7 +50935,6 @@ payload:
   - '+.szp168.com'
   - '+.szpa.com'
   - '+.szpclab.com'
-  - '+.szpgzn.com'
   - '+.szpiao.com'
   - '+.szpiaoyi.com'
   - '+.szpichappy.com'
@@ -52674,7 +52645,6 @@ payload:
   - '+.topomel.com'
   - '+.toppdu.com'
   - '+.topperuse.com'
-  - '+.toppiao.net'
   - '+.topproio.com'
   - '+.topqh.net'
   - '+.toprand.com'
@@ -57074,7 +57044,6 @@ payload:
   - '+.wooaii.com'
   - '+.woocg.com'
   - '+.wooclouds.com'
-  - '+.wood168.com'
   - '+.wood168.net'
   - '+.woodbunny.com'
   - '+.wooddb.com'
@@ -60451,7 +60420,6 @@ payload:
   - '+.yac8.net'
   - '+.yadashi.com'
   - '+.yadgen.com'
-  - '+.yadingchi.com'
   - '+.yadingtour.com'
   - '+.yaduo.com'
   - '+.yaeherhealth.com'
@@ -64530,7 +64498,6 @@ payload:
   - '+.zhongfenxian.com'
   - '+.zhongfenxiang.com'
   - '+.zhongfu.net'
-  - '+.zhongguancun.com'
   - '+.zhongguobaiyin.com'
   - '+.zhongguoditu.com'
   - '+.zhongguofeng.com'
