--- a/directbak.yaml
+++ b/directbak.yaml
@@ -4755,7 +4755,6 @@ payload:
   - '+.55.la'
   - '+.55015.com'
   - '+.550400.com'
-  - '+.5504ll.com'
   - '+.5507p.com'
   - '+.55178.com'
   - '+.55188.com'
@@ -7553,7 +7552,6 @@ payload:
   - '+.acftu.org'
   - '+.acfun.cc'
   - '+.acfunchina.com'
-  - '+.acfunwiki.org'
   - '+.acg-moe.com'
   - '+.acg.gd'
   - '+.acg.gg'
@@ -8446,6 +8444,7 @@ payload:
   - '+.alidns.com'
   - '+.aliedge.com'
   - '+.alienfans.net'
+  - '+.aliensidea.com'
   - '+.alientek.com'
   - '+.aliexpress-media.com'
   - '+.aliexpress.com'
@@ -12156,7 +12155,6 @@ payload:
   - '+.btshidai.com'
   - '+.btsmth.com'
   - '+.btsmth.org'
-  - '+.btsou.org'
   - '+.btspreads.com'
   - '+.btsteel.com'
   - '+.btten.com'
@@ -13387,7 +13385,6 @@ payload:
   - '+.cdyee.com'
   - '+.cdyestar.com'
   - '+.cdygdq.com'
-  - '+.cdyichu.com'
   - '+.cdyimei.com'
   - '+.cdyou.net'
   - '+.cdyuanhang.com'
@@ -15133,6 +15130,7 @@ payload:
   - '+.chuxiangyi.com'
   - '+.chuxindata.com'
   - '+.chuxingyouhui.com'
+  - '+.chuxinhd.com'
   - '+.chuxinhudong.com'
   - '+.chuxinm.com'
   - '+.chuxueyun.com'
@@ -16300,7 +16298,6 @@ payload:
   - '+.codebye.com'
   - '+.codecomeon.com'
   - '+.codedefault.com'
-  - '+.codedocs.net'
   - '+.codedq.net'
   - '+.codedream.xin'
   - '+.codeforge.com'
@@ -16441,7 +16438,6 @@ payload:
   - '+.comicst.com'
   - '+.comicv.com'
   - '+.comicyu.com'
-  - '+.comidu.com'
   - '+.comiis.com'
   - '+.comingchina.com'
   - '+.comingspace.com'
@@ -19209,7 +19205,6 @@ payload:
   - '+.dnss.me'
   - '+.dnss.vip'
   - '+.dnssina.com'
-  - '+.dnsum.com'
   - '+.dnsurl.net'
   - '+.dnsv1.com'
   - '+.dnsv1.net'
@@ -19704,6 +19699,7 @@ payload:
   - '+.dshjfh.com'
   - '+.dshrc.com'
   - '+.dskb.co'
+  - '+.dskystudio.com'
   - '+.dslp168.com'
   - '+.dsmyiyuan.com'
   - '+.dsmzyy.com'
@@ -20799,6 +20795,8 @@ payload:
   - '+.ehedco.com'
   - '+.ehijoy.com'
   - '+.ehinvest.hk'
+  - '+.ehnasia.com'
+  - '+.ehnchina.com'
   - '+.ehome5.com'
   - '+.ehome8.com'
   - '+.ehomeclouds.com'
@@ -23083,7 +23081,6 @@ payload:
   - '+.fujiansme.com'
   - '+.fujieace.com'
   - '+.fujincenter.com'
-  - '+.fujinli.com'
   - '+.fuka.cc'
   - '+.fukeha.com'
   - '+.fulantv.com'
@@ -32802,7 +32799,6 @@ payload:
   - '+.job910.com'
   - '+.job9151.com'
   - '+.job98.com'
-  - '+.job992.com'
   - '+.job9981.com'
   - '+.jobbole.com'
   - '+.jobcdp.com'
@@ -35215,6 +35211,7 @@ payload:
   - '+.kztpms.com'
   - '+.kzwr.com'
   - '+.l2h.site'
+  - '+.l2t7.cc'
   - '+.l36h.com'
   - '+.l5550.com'
   - '+.l68.net'
@@ -36121,7 +36118,6 @@ payload:
   - '+.lialiu.com'
   - '+.lianaibashi.com'
   - '+.lianaibiji.com'
-  - '+.lianbijr.com'
   - '+.lianchuang.com'
   - '+.liancsoft.com'
   - '+.liandaomobi.com'
@@ -36468,7 +36464,6 @@ payload:
   - '+.lingyinsi.com'
   - '+.lingyue-digital.com'
   - '+.lingyuecloud.com'
-  - '+.lingyuewx.com'
   - '+.lingyun.net'
   - '+.lingyun5.com'
   - '+.lingyunip.com'
@@ -36618,7 +36613,6 @@ payload:
   - '+.lipinduihuan.com'
   - '+.lippt.com'
   - '+.liqihuoke.com'
-  - '+.liqile.com'
   - '+.liqinyi.com'
   - '+.liqu.com'
   - '+.liquidnetwork.com'
@@ -36846,6 +36840,7 @@ payload:
   - '+.lizhongyi.com'
   - '+.lizi.com'
   - '+.lizi.tw'
+  - '+.lizilaw.com'
   - '+.liziqiche.com'
   - '+.lj-bank.com'
   - '+.lj168.com'
@@ -44406,6 +44401,7 @@ payload:
   - '+.qiaoxuanhong.com'
   - '+.qiaoyi.org'
   - '+.qiaoyou020.com'
+  - '+.qiaozuji.com'
   - '+.qiaqa.com'
   - '+.qiaqiafood.com'
   - '+.qiawei.com'
@@ -46120,7 +46116,6 @@ payload:
   - '+.rlydw.com'
   - '+.rlyl.net'
   - '+.rm-static.djicdn.com'
-  - '+.rm96.com'
   - '+.rmb.sh'
   - '+.rmcteam.org'
   - '+.rmhospital.com'
@@ -47880,6 +47875,7 @@ payload:
   - '+.shenruan.org'
   - '+.shenshi777.com'
   - '+.shenshiads.com'
+  - '+.shenshoucdn.com'
   - '+.shenshouwl.com'
   - '+.shenshouyouxi.com'
   - '+.shenshu.info'
@@ -48571,6 +48567,7 @@ payload:
   - '+.shxil.com'
   - '+.shxkwck.com'
   - '+.shxmhc.com'
+  - '+.shxnetwork.com'
   - '+.shxt.com'
   - '+.shxwcb.com'
   - '+.shy99.com'
@@ -48656,7 +48653,6 @@ payload:
   - '+.sigmoblive.com'
   - '+.sigu.cc'
   - '+.sigu.me'
-  - '+.sigujx.com'
   - '+.siguoya.name'
   - '+.sigure.xyz'
   - '+.sigvc.org'
@@ -49465,6 +49461,7 @@ payload:
   - '+.solo-launcher.com'
   - '+.solochex.com'
   - '+.solodonna.world'
+  - '+.soloknight.xyz'
   - '+.solosea.com'
   - '+.solotoon.com'
   - '+.solution9.net'
@@ -50030,7 +50027,6 @@ payload:
   - '+.stmybj.com'
   - '+.stnn.cc'
   - '+.stnts.com'
-  - '+.sto80.com'
   - '+.stock8m.com'
   - '+.stockhn.com'
   - '+.stockstar.com'
@@ -50417,7 +50413,6 @@ payload:
   - '+.surveyhills.com'
   - '+.surveyunion.com'
   - '+.survivor99.com'
-  - '+.sushouka688.com'
   - '+.susong51.com'
   - '+.susongbbs.com'
   - '+.sustc.us'
@@ -51380,7 +51375,6 @@ payload:
   - '+.taskcity.com'
   - '+.taskcn.com'
   - '+.taskyou.net'
-  - '+.taslgs.com'
   - '+.tasly.com'
   - '+.tastespirit.com'
   - '+.tastones.com'
@@ -54118,7 +54112,6 @@ payload:
   - '+.usu8.com'
   - '+.usuredata.com'
   - '+.uszcn.com'
-  - '+.ut7.com'
   - '+.ut8d.com'
   - '+.utan.com'
   - '+.utanbaby.com'
@@ -55749,6 +55742,7 @@ payload:
   - '+.weilanhaian.com'
   - '+.weilanliuxue.com'
   - '+.weile.com'
+  - '+.weileapp.com'
   - '+.weiling520.com'
   - '+.weilingdi.com'
   - '+.weilinovel.net'
@@ -58932,6 +58926,7 @@ payload:
   - '+.xinghuogroup.com'
   - '+.xinghuoxiaoshuo.com'
   - '+.xingjijy.com'
+  - '+.xingjimob.com'
   - '+.xingjuhe.com'
   - '+.xingkeduo.com'
   - '+.xingkong.com'
@@ -65470,6 +65465,7 @@ payload:
   - '+.zqwzc.com'
   - '+.zqxinxi.com'
   - '+.zqxsc.com'
+  - '+.zqygame.com'
   - '+.zqzj.org'
   - '+.zqzyxx.com'
   - '+.zrahh.com'
