--- a/directbak.yaml
+++ b/directbak.yaml
@@ -970,6 +970,7 @@ payload:
   - '+.114park.com'
   - '+.114photo.com'
   - '+.114piaowu.com'
+  - '+.114pifa.com'
   - '+.114pinpai.com'
   - '+.114px.com'
   - '+.114qy.com'
@@ -1780,7 +1781,6 @@ payload:
   - '+.18xs.org'
   - '+.18yangzhi.com'
   - '+.18yl.com'
-  - '+.18zg.com'
   - '+.18zhuanqian.com'
   - '+.18zw.com'
   - '+.1903it.com'
@@ -2798,7 +2798,6 @@ payload:
   - '+.3361.com'
   - '+.3366.com'
   - '+.3366.net'
-  - '+.336655.com'
   - '+.3366722.com'
   - '+.336688.net'
   - '+.3366img.com'
@@ -3347,7 +3346,6 @@ payload:
   - '+.3gus.com'
   - '+.3h3.com'
   - '+.3hbox.com'
-  - '+.3hgui.com'
   - '+.3incloud.com'
   - '+.3j4.com'
   - '+.3jdh.com'
@@ -6613,7 +6611,6 @@ payload:
   - '+.915799.com'
   - '+.9158ads.com'
   - '+.9158h5.com'
-  - '+.915c.com'
   - '+.9166yx.com'
   - '+.916m.com'
   - '+.917.com'
@@ -7948,6 +7945,7 @@ payload:
   - '+.ahu.cc'
   - '+.ahuano.com'
   - '+.ahudows.com'
+  - '+.ahugeship.com'
   - '+.ahuyi.com'
   - '+.ahwwnews.com'
   - '+.ahwxcs.com'
@@ -8511,7 +8509,6 @@ payload:
   - '+.aliyue.net'
   - '+.aliyun-cdn.com'
   - '+.aliyun-inc.com'
-  - '+.aliyun-ns.com'
   - '+.aliyun-youhui.com'
   - '+.aliyun.com'
   - '+.aliyun.org'
@@ -9758,7 +9755,6 @@ payload:
   - '+.b2baa.com'
   - '+.b2bic.com'
   - '+.b2bname.com'
-  - '+.b2bneican.com'
   - '+.b2bvip.com'
   - '+.b2bvip.net'
   - '+.b2cedu.com'
@@ -11268,7 +11264,6 @@ payload:
   - '+.biyong007.com'
   - '+.biyou.tech'
   - '+.biyoujz.com'
-  - '+.biyuns.com'
   - '+.biyuwu.cc'
   - '+.biz-east.com'
   - '+.biz178.com'
@@ -11853,7 +11848,6 @@ payload:
   - '+.bolo.me'
   - '+.bolopp.com'
   - '+.bolq.com'
-  - '+.boluo.com'
   - '+.boluo.link'
   - '+.boluo.org'
   - '+.boluocat.com'
@@ -11970,7 +11964,6 @@ payload:
   - '+.bounb.com'
   - '+.boweifeng.com'
   - '+.bowerp.com'
-  - '+.bowin8.com'
   - '+.bowuzhi.fm'
   - '+.boxgu.com'
   - '+.boxopened.com'
@@ -12151,7 +12144,6 @@ payload:
   - '+.btsabc.org'
   - '+.btschool.net'
   - '+.btsemi.com'
-  - '+.btsha.com'
   - '+.btshidai.com'
   - '+.btsmth.com'
   - '+.btsmth.org'
@@ -13757,7 +13749,6 @@ payload:
   - '+.changhong.com'
   - '+.changhongdianzi.com'
   - '+.changhongit.com'
-  - '+.changhongnet.com'
   - '+.changhuapower.com'
   - '+.changjiangdata.com'
   - '+.changjiangexpress.com'
@@ -16002,7 +15993,6 @@ payload:
   - '+.cnlive.com'
   - '+.cnliveimg.com'
   - '+.cnllz.com'
-  - '+.cnlogo8.com'
   - '+.cnlty.com'
   - '+.cnmanhua.com'
   - '+.cnmattson.com'
@@ -18144,7 +18134,6 @@ payload:
   - '+.ddbiquge.cc'
   - '+.ddbiquge.com'
   - '+.ddbiu.com'
-  - '+.ddchong.com'
   - '+.ddcode.net'
   - '+.ddd-china.com'
   - '+.ddddns.net'
@@ -18917,7 +18906,6 @@ payload:
   - '+.diybcq.com'
   - '+.diybuy.net'
   - '+.diycode.cc'
-  - '+.diydoutu.com'
   - '+.diyer.so'
   - '+.diygogogo.com'
   - '+.diygw.com'
@@ -21887,6 +21875,7 @@ payload:
   - '+.fansyes.com'
   - '+.fantablade.com'
   - '+.fantaiai.com'
+  - '+.fantaicdn.net'
   - '+.fantanggame.com'
   - '+.fantatech.com'
   - '+.fantawild.com'
@@ -22796,7 +22785,6 @@ payload:
   - '+.foreseamall.com'
   - '+.foresl.com'
   - '+.forestfood.com'
-  - '+.forestpest.org'
   - '+.forestpolice.org'
   - '+.foreveross.com'
   - '+.forgame.com'
@@ -22936,7 +22924,6 @@ payload:
   - '+.freemancn.com'
   - '+.freemindworld.com'
   - '+.freemoban.com'
-  - '+.freemojo.com'
   - '+.freemudgame.com'
   - '+.freeoa.net'
   - '+.freeqingnovel.com'
@@ -23034,6 +23021,7 @@ payload:
   - '+.ftcauction.com'
   - '+.ftcgj.com'
   - '+.ftfast.com'
+  - '+.fthformal.com'
   - '+.ftium4.com'
   - '+.ftnormal00ab.com'
   - '+.ftnormal00ak.com'
@@ -23340,6 +23328,7 @@ payload:
   - '+.fzyfan.net'
   - '+.fzyfs.net'
   - '+.fzzqcdn.com'
+  - '+.fzzycs.com'
   - '+.g-emall.com'
   - '+.g-photography.net'
   - '+.g-var.com'
@@ -24775,7 +24764,6 @@ payload:
   - '+.grizcom.com'
   - '+.grmxdy.com'
   - '+.gro2004.com'
-  - '+.gro2005.com'
   - '+.groad.net'
   - '+.groovyfilmes.com'
   - '+.grouk.com'
@@ -24887,7 +24875,6 @@ payload:
   - '+.gtn9.com'
   - '+.gto365.com'
   - '+.gtobal.com'
-  - '+.gttof2020.com'
   - '+.gttxidc.com'
   - '+.gtuanb.com'
   - '+.gtuu.com'
@@ -25395,7 +25382,6 @@ payload:
   - '+.gzexpo.com'
   - '+.gzfilm.com'
   - '+.gzfsnet.com'
-  - '+.gzfxkwl.com'
   - '+.gzgc120.com'
   - '+.gzgdwl.com'
   - '+.gzguard12th.com'
@@ -25821,6 +25807,7 @@ payload:
   - '+.hallofix.com'
   - '+.halomobi.com'
   - '+.haluoha.com'
+  - '+.hama-net.com'
   - '+.hamanw.com'
   - '+.hambut.com'
   - '+.hamir.net'
@@ -26219,6 +26206,7 @@ payload:
   - '+.happyplaygame.net'
   - '+.happyroll.net'
   - '+.happysky.org'
+  - '+.happytimenet.com'
   - '+.happytrave.com'
   - '+.happyux.com'
   - '+.happywalk.net'
@@ -26398,7 +26386,6 @@ payload:
   - '+.hbpengxi.com'
   - '+.hbpic5.com'
   - '+.hbpictures.com'
-  - '+.hbprjx.com'
   - '+.hbptzsbw.com'
   - '+.hbpukang.com'
   - '+.hbpygt.com'
@@ -27168,7 +27155,6 @@ payload:
   - '+.himigame.com'
   - '+.himiku.com'
   - '+.himofi.com'
-  - '+.himovie.net'
   - '+.himy2.com'
   - '+.hinabian.com'
   - '+.hinavi.net'
@@ -29054,6 +29040,7 @@ payload:
   - '+.hzhanbo.com'
   - '+.hzhfzx.com'
   - '+.hzhike.com'
+  - '+.hzhisoft.com'
   - '+.hzhltec.com'
   - '+.hzhr.com'
   - '+.hzhuangxiang.com'
@@ -29203,6 +29190,7 @@ payload:
   - '+.i5738.com'
   - '+.i5i6.net'
   - '+.i5mai.com'
+  - '+.i66wan.com'
   - '+.i6879.com'
   - '+.i7box.com'
   - '+.i7fh.com'
@@ -30502,6 +30490,7 @@ payload:
   - '+.ioa365.com'
   - '+.ioage.com'
   - '+.iocrest.com'
+  - '+.iodraw.com'
   - '+.ioeyjsb.com'
   - '+.ioffershow.com'
   - '+.ioffice100.com'
@@ -30676,7 +30665,6 @@ payload:
   - '+.iqycamp.com'
   - '+.iranshao.com'
   - '+.iraoping.com'
-  - '+.iray.me'
   - '+.ircmnr.com'
   - '+.ireader.com'
   - '+.ireadercity.com'
@@ -31430,7 +31418,6 @@ payload:
   - '+.jcwgk.com'
   - '+.jcwxiao.com'
   - '+.jcyes.com'
-  - '+.jcyipong.com'
   - '+.jcyunk2.com'
   - '+.jcyx2019.com'
   - '+.jczhijia.com'
@@ -31876,7 +31863,6 @@ payload:
   - '+.jianzhiba.net'
   - '+.jianzhijiaoyu.com'
   - '+.jianzhikeji.com'
-  - '+.jianzhila.net'
   - '+.jianzhimao.com'
   - '+.jianzhiwang.com'
   - '+.jianzhiwangzhan.com'
@@ -32319,7 +32305,6 @@ payload:
   - '+.jinshun.com'
   - '+.jinsiwei.com'
   - '+.jintaimall.com'
-  - '+.jintajituan.com'
   - '+.jintang114.org'
   - '+.jinti.com'
   - '+.jintiango.com'
@@ -32787,7 +32772,6 @@ payload:
   - '+.job0768.com'
   - '+.job10000.com'
   - '+.job1001.com'
-  - '+.job120.com'
   - '+.job168.com'
   - '+.job256.com'
   - '+.job263.com'
@@ -33207,7 +33191,6 @@ payload:
   - '+.jtm.pub'
   - '+.jtnsh.com'
   - '+.jtnxs.com'
-  - '+.jtstudy.com'
   - '+.jttv.net'
   - '+.jtv123.com'
   - '+.jtyjy.com'
@@ -34060,7 +34043,6 @@ payload:
   - '+.kdebell.com'
   - '+.kdfax.com'
   - '+.kdige.com'
-  - '+.kdmobi.com'
   - '+.kdniao.com'
   - '+.kdpt.net'
   - '+.kdroid.club'
@@ -34762,7 +34744,6 @@ payload:
   - '+.ksgnr.com'
   - '+.kshot.com'
   - '+.ksjgs.com'
-  - '+.kskino.com'
   - '+.ksks001.com'
   - '+.kskwai.com'
   - '+.ksldg.com'
@@ -34926,6 +34907,7 @@ payload:
   - '+.kuaiyoujia.com'
   - '+.kuaiyouxi.com'
   - '+.kuaiyu.com'
+  - '+.kuaiyugo.com'
   - '+.kuaiyunbd.com'
   - '+.kuaiyunds.com'
   - '+.kuaizhan.com'
@@ -35289,7 +35271,6 @@ payload:
   - '+.laisj.com'
   - '+.laituia.com'
   - '+.laituijian.net'
-  - '+.laiwang.com'
   - '+.laiwo.com'
   - '+.laiwu.net'
   - '+.laiwumedia.com'
@@ -35411,6 +35392,7 @@ payload:
   - '+.lanlicai.com'
   - '+.lanlv.com'
   - '+.lanmao.com'
+  - '+.lanmaokeji.com'
   - '+.lanmaos.com'
   - '+.lanmit.com'
   - '+.lanou3g.com'
@@ -35451,7 +35433,6 @@ payload:
   - '+.lanxiongsports.com'
   - '+.lanxum.com'
   - '+.lanyaa.com'
-  - '+.lanyg.com'
   - '+.lanyingwang.com'
   - '+.lanyuanxiaoyao.com'
   - '+.lanyunbrand.com'
@@ -36373,6 +36354,7 @@ payload:
   - '+.lilvb.com'
   - '+.lily-collection.com'
   - '+.lilyenglish.com'
+  - '+.lilyinthefield.com'
   - '+.lilysamericandiner.com'
   - '+.lilysgame.com'
   - '+.limax.com'
@@ -36846,7 +36828,6 @@ payload:
   - '+.lj168.com'
   - '+.ljbao.net'
   - '+.ljcdn.com'
-  - '+.ljemail.org'
   - '+.ljhis.com'
   - '+.ljhks.net'
   - '+.ljia.com'
@@ -38018,7 +37999,6 @@ payload:
   - '+.maihenghb.com'
   - '+.maijia.com'
   - '+.maijiaba.com'
-  - '+.maijiabashi.com'
   - '+.maijiakan.com'
   - '+.maijichuang.net'
   - '+.mail-qq.com'
@@ -38732,7 +38712,6 @@ payload:
   - '+.meishuwenxian.com'
   - '+.meisubq.com'
   - '+.meisupic.com'
-  - '+.meitaixianlan.com'
   - '+.meitangdehulu.com'
   - '+.meitegou.com'
   - '+.meitianhui.com'
@@ -38818,6 +38797,7 @@ payload:
   - '+.menglechong.com'
   - '+.menglegame.com'
   - '+.mengma.com'
+  - '+.mengmax.fun'
   - '+.mengniang.tv'
   - '+.mengniu99.com'
   - '+.mengqianxun.net'
@@ -39859,7 +39839,6 @@ payload:
   - '+.motieimg.com'
   - '+.motilive.com'
   - '+.motimaster.com'
-  - '+.motionhubtuto.com'
   - '+.motisky.com'
   - '+.moto-one.com.hk'
   - '+.moto8.com'
@@ -40245,7 +40224,6 @@ payload:
   - '+.my5v.com'
   - '+.my607.com'
   - '+.my68.com'
-  - '+.my7475.com'
   - '+.my7v.com'
   - '+.my88316666.com'
   - '+.my9166.com'
@@ -40475,7 +40453,6 @@ payload:
   - '+.mytokenpocket.vip'
   - '+.mytrix.me'
   - '+.mytv365.com'
-  - '+.mytvbt.com'
   - '+.mytvgame.com'
   - '+.myuall.com'
   - '+.myubbs.com'
@@ -41122,7 +41099,6 @@ payload:
   - '+.niiceda.com'
   - '+.niiwoo.com'
   - '+.nikanpian.com'
-  - '+.nikefree-run.net'
   - '+.nikest.com'
   - '+.nikkisoft.com'
   - '+.nikkiup2u2.com'
@@ -41346,7 +41322,6 @@ payload:
   - '+.nn12333.com'
   - '+.nn92.com'
   - '+.nncc626.com'
-  - '+.nncgs.com'
   - '+.nncj.com'
   - '+.nndims.com'
   - '+.nnduyi.com'
@@ -42185,7 +42160,6 @@ payload:
   - '+.opwill.com'
   - '+.opxincai.com'
   - '+.opython.com'
-  - '+.opzoon.com'
   - '+.oq78.com'
   - '+.oqss.com'
   - '+.or-sun.com'
@@ -43126,7 +43100,6 @@ payload:
   - '+.piaotian5.com'
   - '+.piaotongyun.com'
   - '+.piaowutong.cc'
-  - '+.piaoxian.net'
   - '+.piaoxingqiu.com'
   - '+.piaoyi.org'
   - '+.piaoyun.net'
@@ -45591,6 +45564,7 @@ payload:
   - '+.r5k.com'
   - '+.r5tao.com'
   - '+.r77777777.com'
+  - '+.ra2ol.com'
   - '+.rabbitpre.com'
   - '+.rabbitpre.me'
   - '+.race604.com'
@@ -46405,7 +46379,6 @@ payload:
   - '+.ruidroid.xyz'
   - '+.ruifang-tech.com'
   - '+.ruiguandental.com'
-  - '+.ruiguanrobot.com'
   - '+.ruihaimeifeng.com'
   - '+.ruihuo.com'
   - '+.ruiii.com'
@@ -47735,7 +47708,6 @@ payload:
   - '+.shcell.org'
   - '+.shchengsan.com'
   - '+.shchhukou.com'
-  - '+.shchjj.com'
   - '+.shclearing.com'
   - '+.shcljoy.com'
   - '+.shcngz.com'
@@ -49076,6 +49048,7 @@ payload:
   - '+.skyrj.com'
   - '+.skysea.com'
   - '+.skysgame.com'
+  - '+.skysriver.com'
   - '+.skysrt.com'
   - '+.skyts.net'
   - '+.skytv.cc'
@@ -49171,6 +49144,7 @@ payload:
   - '+.smarthomecn.com'
   - '+.smartisan.com'
   - '+.smartisanos.com'
+  - '+.smartjoygames.com'
   - '+.smartleon.net'
   - '+.smartlifein.com'
   - '+.smartlinku.com'
@@ -49901,7 +49875,6 @@ payload:
   - '+.ssreader.com'
   - '+.ssrrxx.com'
   - '+.ssrtys.com'
-  - '+.sss129vip.com'
   - '+.ssscdn.com'
   - '+.sssie.com'
   - '+.ssso.com'
@@ -50487,6 +50460,7 @@ payload:
   - '+.swift51.com'
   - '+.swifter.tips'
   - '+.swifthumb.com'
+  - '+.swiftjava.com'
   - '+.swiftlet.net'
   - '+.swiftmi.com'
   - '+.swiftstar.net'
@@ -50539,6 +50513,7 @@ payload:
   - '+.sxemc.com'
   - '+.sxepc.com'
   - '+.sxfblog.com'
+  - '+.sxfoundation.com'
   - '+.sxfu.org'
   - '+.sxgdtv.com'
   - '+.sxglpx.com'
@@ -52419,7 +52394,6 @@ payload:
   - '+.tohic.net'
   - '+.tohkalove.com'
   - '+.tohosting.com'
-  - '+.tohosting.net'
   - '+.tohours.com'
   - '+.tohuo.com'
   - '+.toidea.com'
@@ -54260,7 +54234,6 @@ payload:
   - '+.v114.com'
   - '+.v1bo.com'
   - '+.v1h5.com'
-  - '+.v1kd.com'
   - '+.v1lady.com'
   - '+.v1pin.com'
   - '+.v1tuan.com'
@@ -57590,7 +57563,6 @@ payload:
   - '+.wxcha.com'
   - '+.wxcsgd.com'
   - '+.wxdgjx.com'
-  - '+.wxdspt.com'
   - '+.wxeditor.com'
   - '+.wxfenxiao.com'
   - '+.wxfls.net'
@@ -58574,7 +58546,6 @@ payload:
   - '+.xiaoshijie.com'
   - '+.xiaoshitou123.com'
   - '+.xiaoshituina.vip'
-  - '+.xiaoshoubang.org'
   - '+.xiaoshouhudong.com'
   - '+.xiaoshoukuaifa.com'
   - '+.xiaoshouyi.com'
@@ -59959,6 +59930,7 @@ payload:
   - '+.xuhot.com'
   - '+.xujianhua.com'
   - '+.xujun.org'
+  - '+.xuka.com'
   - '+.xukai.xyz'
   - '+.xulaoshi68.com'
   - '+.xuliangwei.com'
@@ -61191,7 +61163,6 @@ payload:
   - '+.yimiaozhongdemeng.com'
   - '+.yimidida.com'
   - '+.yimihaodi.com'
-  - '+.yimikf.com'
   - '+.yimin.biz'
   - '+.yimin168.com'
   - '+.yimincaifu.com'
@@ -61212,7 +61183,6 @@ payload:
   - '+.yinbangbroker.com'
   - '+.yinbin.ink'
   - '+.yinchengpai.com'
-  - '+.yinchengwealth.com'
   - '+.yindon.com'
   - '+.yindou.com'
   - '+.yindudigital.com'
@@ -61268,7 +61238,6 @@ payload:
   - '+.yingtaoai.com'
   - '+.yingtaosiyue.com'
   - '+.yingtaoyun.com'
-  - '+.yingucaifu.com'
   - '+.yingujr.com'
   - '+.yinguobing.com'
   - '+.yingupuhui.com'
@@ -62124,7 +62093,6 @@ payload:
   - '+.youxiake.com'
   - '+.youxiake.net'
   - '+.youxiamotors.com'
-  - '+.youxiang03.com'
   - '+.youxiaoad.com'
   - '+.youxiaohou.com'
   - '+.youxiaxiazai.com'
@@ -62182,6 +62150,7 @@ payload:
   - '+.youyacao.com'
   - '+.youyanchu.com'
   - '+.youyannet.com'
+  - '+.youyegame.com'
   - '+.youyikeji666.com'
   - '+.youyilm.com'
   - '+.youyiqi.com'
@@ -62338,7 +62307,6 @@ payload:
   - '+.yscb.net'
   - '+.ysch.cc'
   - '+.yscq.com'
-  - '+.ysdui.com'
   - '+.yse360.cc'
   - '+.ysedu.com'
   - '+.yseeker.com'
@@ -63267,6 +63235,7 @@ payload:
   - '+.yzpetfood.com'
   - '+.yzrb.com'
   - '+.yzrom.com'
+  - '+.yzrshop.com'
   - '+.yzs.com'
   - '+.yzsbh.com'
   - '+.yzspdq.com'
@@ -63736,7 +63705,6 @@ payload:
   - '+.zgny.com'
   - '+.zgong.com'
   - '+.zgpingshu.com'
-  - '+.zgpj.net'
   - '+.zgpts.com'
   - '+.zgqkk.com'
   - '+.zgqw.com'
@@ -63773,7 +63741,6 @@ payload:
   - '+.zgtlgs.com'
   - '+.zgtsm.com'
   - '+.zgtuku.com'
-  - '+.zgtxw.com'
   - '+.zgtygg.com'
   - '+.zgtzhb.com'
   - '+.zgui.com'
@@ -64839,6 +64806,7 @@ payload:
   - '+.zifandiaosu.com'
   - '+.zifeiwuya.com'
   - '+.zige365.com'
+  - '+.zigecha.com'
   - '+.zigeer.com'
   - '+.zigqnx.com'
   - '+.ziguhonglan.com'
@@ -65246,6 +65214,7 @@ payload:
   - '+.zluren.com'
   - '+.zlvod.com'
   - '+.zlw.so'
+  - '+.zlxiang.com'
   - '+.zlygu.com'
   - '+.zm1717.com'
   - '+.zmapp.com'
